dataset1235/2025-2/805158916/users/3920620008/executions/2651470117_704983377.log
== RUN (2025-08-20 15:19:13)
-- CODE: 
x = int(input("Entre com valor x:"))
y = int (input("Entre com o valor y:"))
 Q1 = x // y
R = x % y 
Q2 = x / y
Pr = x * y
Pot = y ** 3

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 3
    Q1 = x // y
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 3
    Q1 = x // y
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 3
    Q1 = x // y
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 3
    Q1 = x // y
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 3
    Q1 = x // y
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 3
    Q1 = x // y
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 15:24:25)
-- CODE: 
x = int(input("Entre com valor x:"))
y = int(input("Entre com o valor y:"))

Q1 = x // y
R = x % y 
Q2 = x / y
Pr = x * y
Pot = y ** 3
print (Q1)
print (R)
print (Q2)
print (Pr)
print ( Pot)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 15:21:39)
-- CODE: 
x = int(input("Entre com valor x:"))
y = int (input("Entre com o valor y:"))
 Q1 = x // y
R = x % y 
Q2 = x / y
Pr = x * y
Pot = y ** 3
 print (x // y)
print (x % y)
print (x * y)
print (y ** 3)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 3
    Q1 = x // y
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 3
    Q1 = x // y
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 3
    Q1 = x // y
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 3
    Q1 = x // y
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 3
    Q1 = x // y
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 3
    Q1 = x // y
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 15:21:41)
-- CODE: 
x = int(input("Entre com valor x:"))
y = int (input("Entre com o valor y:"))
 Q1 = x // y
R = x % y 
Q2 = x / y
Pr = x * y
Pot = y ** 3
 print (x // y)
print (x % y)
print (x * y)
print (y ** 3)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 3
    Q1 = x // y
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 3
    Q1 = x // y
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 3
    Q1 = x // y
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 3
    Q1 = x // y
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 3
    Q1 = x // y
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 3
    Q1 = x // y
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 15:23:46)
-- CODE: 
x = int(input("Entre com valor x:"))
y = int(input("Entre com o valor y:"))

Q1 = x // y
R = x % y 
Q2 = x / y
Pr = x * y
Pot = y ** 3
print (Q1)
print (R)
print (Q2)
print (Pr)
print ( Pot)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 15:24:09)
-- CODE: 
x = int(input("Entre com valor x:"))
y = int(input("Entre com o valor y:"))

Q1 = x // y
R = x % y 
Q2 = x / y
Pr = x * y
Pot = y ** 3
print (Q1)
print (R)
print (Q2)
print (Pr)
print ( Pot)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 15:21:57)
-- CODE: 
x = int(input("Entre com valor x:"))
y = int(input("Entre com o valor y:"))
 Q1 = x // y
R = x % y 
Q2 = x / y
Pr = x * y
Pot = y ** 3
 print (x // y)
print (x % y)
print (x * y)
print (y ** 3)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 3
    Q1 = x // y
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 3
    Q1 = x // y
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 3
    Q1 = x // y
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 3
    Q1 = x // y
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 3
    Q1 = x // y
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 3
    Q1 = x // y
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 15:24:01)
-- CODE: 
x = int(input("Entre com valor x:"))
y = int(input("Entre com o valor y:"))

Q1 = x // y
R = x % y 
Q2 = x / y
Pr = x * y
Pot = y ** 3
print (Q1)
print (R)
print (Q2)
print (Pr)
print ( Pot)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 15:24:26)
-- CODE: 
x = int(input("Entre com valor x:"))
y = int(input("Entre com o valor y:"))

Q1 = x // y
R = x % y 
Q2 = x / y
Pr = x * y
Pot = y ** 3
print (Q1)
print (R)
print (Q2)
print (Pr)
print ( Pot)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 15:23:58)
-- CODE: 
x = int(input("Entre com valor x:"))
y = int(input("Entre com o valor y:"))

Q1 = x // y
R = x % y 
Q2 = x / y
Pr = x * y
Pot = y ** 3
print (Q1)
print (R)
print (Q2)
print (Pr)
print ( Pot)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 15:24:03)
-- CODE: 
x = int(input("Entre com valor x:"))
y = int(input("Entre com o valor y:"))

Q1 = x // y
R = x % y 
Q2 = x / y
Pr = x * y
Pot = y ** 3
print (Q1)
print (R)
print (Q2)
print (Pr)
print ( Pot)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 15:21:42)
-- CODE: 
x = int(input("Entre com valor x:"))
y = int (input("Entre com o valor y:"))
 Q1 = x // y
R = x % y 
Q2 = x / y
Pr = x * y
Pot = y ** 3
 print (x // y)
print (x % y)
print (x * y)
print (y ** 3)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 3
    Q1 = x // y
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 3
    Q1 = x // y
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 3
    Q1 = x // y
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 3
    Q1 = x // y
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 3
    Q1 = x // y
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 3
    Q1 = x // y
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
